repositioned list input to avoid overlap with add btn

--- a/client/styles/index.scss
+++ b/client/styles/index.scss
@@ -113,7 +113,7 @@ h2{
 }
 
 .form-input{
-    margin-right: -2rem;
+    margin-right: -1rem;
     border: 3px solid #77a6f7;
     border-radius: 3px;
     padding: 15px;
